# mcp-server

./: .gitignore  README.md  configure.py  main.py  pyproject.toml
.claude/: settings.local.json
.github/assets/: RELEASE_NOTES.md
.github/workflows/: build-release.yml  lint.yml
docs/: CONFIGURE_CN.md  CONFIG_UPDATE.md  SEARCH_ADVANCED.md  SEARCH_UPGRADE.md  SETUP_GUIDE.md  SUBAGENT_CONFIG.md  SUBAGENT_GUIDE.md  ZHIPUAI_GUIDE.md
docs/en/: BUILD.md  INSTALLATION.md  TOOL_REFERENCE.md
docs/zh/: CONFIGURATION_GUIDE_CN.md
examples/: README.md  basic_usage.py  file_operations_example.py  subagent_config_example.py  subagent_usage_example.py  web_search_example.py
extracted_tar/: test2.txt
extracted_zip/: test1.txt  test_compress_1.txt  test_compress_2.txt
src/mcp_server/: __init__.py  command_executor.py  main.py  utils.py
src/mcp_server/cli/: config.py
src/mcp_server/tools/: compression.py  data.py  file.py  pylance.py  python.py  search_engine.py  subagent.py  subagent_config.py  system.py  text.py  utility.py  uv.py  web.py
src/mcp_server/tools/data/: handlers.py
src/mcp_server/tools/web/: handlers.py
test_project/: pyproject.toml
tests/: conftest.py  test_command_executor.py  test_compression.py  test_data.py  test_file.py  test_pylance.py  test_python.py  test_subagent.py  test_subagent_no_billing.py  test_system.py  test_text.py  test_utility.py  test_uv.py  test_web.py
