[project]
name = "mcp-server"
version = "0.1.0"
description = "Comprehensive MCP server with web search, file operations, data processing, and system utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=4.1.0",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[tool.uv.workspace]
members = [
    "test_project",
    "test_uv_project",
]
